# additonal-mesh-examples

./: .gitignore  README.md
DimmerWithSerial/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
DimmerWithSerial/boards/: nrf52840dongle_nrf52840_bare.conf
DimmerWithSerial/include/: model_handler.h
DimmerWithSerial/src/: model_handler.c  serial_cmd.c  usb_cdc_line_state.c
provisioner_network_setup/: CMakeLists.txt  Kconfig  README.md  prj.conf
provisioner_network_setup/boards/: nrf52840dk_nrf52840.conf  nrf5340dk_nrf5340_cpuapp_ns.conf  nrf54l15dk_nrf54l15_cpuapp.conf  qemu_x86.conf
provisioner_network_setup/include/: mesh_config_types.h  mesh_net_cfg.h  mesh_recipes.h  prov_cache.h  prov_scan_names.h  prov_shell.h  provisioner_handler.h  scenario_network1.h
provisioner_network_setup/src/: main.c  mesh_net_cfg.c  mesh_recipes.c  prov_cache.c  prov_scan_names.c  prov_shell.c  provisioner_handler.c  scenario_network1.c
